[gd_scene load_steps=15 format=2]

[ext_resource path="res://TileMap1.gd" type="Script" id=1]
[ext_resource path="res://images/unknown.png" type="Texture" id=2]
[ext_resource path="res://images/no_bombs.png" type="Texture" id=3]
[ext_resource path="res://images/numbers2.png" type="Texture" id=4]
[ext_resource path="res://images/flag.png" type="Texture" id=5]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Label.gd" type="Script" id=8]

[sub_resource type="TileSet" id=1]
0/name = "unknown.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "no_bombs.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "numbers2.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 640, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "flag.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 62
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 62
extra_spacing_top = 8
extra_spacing_char = 1
extra_spacing_space = 5
font_data = ExtResource( 7 )

[sub_resource type="GDScript" id=6]
resource_local_to_scene = true
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	
	
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_TileMap_bomb_count_change(bombs):
	
	self.text = str(bombs)
	pass # Replace with function body.
"

[sub_resource type="DynamicFont" id=7]
size = 62
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
editor_draw_drag_margin = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 64 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -786385, 1, 0 )
script = ExtResource( 1 )

[node name="NumbersTileMap" type="TileMap" parent="TileMap"]
tile_set = SubResource( 2 )
format = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 375.0
margin_bottom = 76.0
custom_constants/separation = 55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 264.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer2"]
show_behind_parent = true
margin_top = 4.0
margin_right = 225.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
text = "Bombs: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer/HBoxContainer2"]
margin_left = 229.0
margin_right = 264.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 5 )
text = "0"
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 319.0
margin_right = 527.0
margin_bottom = 82.0

[node name="Label3" type="Label" parent="HBoxContainer/HBoxContainer"]
show_behind_parent = true
margin_top = 4.0
margin_right = 169.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 7 )
text = "Time: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_left = 173.0
margin_right = 208.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 5 )
text = "0"
script = ExtResource( 8 )
[connection signal="bomb_count_change" from="TileMap" to="HBoxContainer/HBoxContainer2/Label2" method="_on_TileMap_bomb_count_change"]
[connection signal="level_started" from="TileMap" to="HBoxContainer/HBoxContainer/Label" method="_on_TileMap_level_started"]
[connection signal="level_stopped" from="TileMap" to="HBoxContainer/HBoxContainer/Label" method="_on_TileMap_level_stopped"]
